use of @DBRef and added user entity and JournalEntity code linked to user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=taskManager
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=journalDB
+spring.data.mongodb.auto-index-creation=true
