--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=taskManager
-spring.data.mongodb.uri=mongodb+srv://vaibhav:<password>@cluster0.srlpamh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=mongodb+srv://vaibhav:4454@cluster0.srlpamh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journalDB
 spring.data.mongodb.auto-index-creation=true
 spring.main.allow-circular-references=true
